add max iter (1_bis)

--- a/compare_results_1bis.ipynb
+++ b/compare_results_1bis.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = './results/'\n",
+    "path = './results_1bis/'\n",
     "matrix_names = [\"spa1\", \"spa2\", \"vem1\", \"vem2\"]\n",
     "tols = ['1e-04', '1e-06', '1e-08', '1e-10']\n",
     "all_data = {}\n",
